--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ plugins {
   	id 'org.openjfx.javafxplugin' version '0.0.8'
   	id 'war'
   	id "org.gretty" version "3.0.3"
+  	id "org.sonarqube" version "3.0"
 }
 
 javafx {
@@ -20,7 +21,33 @@ javafx {
     modules = [ 'javafx.controls', 'javafx.fxml']
 }
 
-mainClassName = 'control.AppLauncher'
+sonarqube {
+  properties {
+    property "sonar.projectKey", "FNX-hub_WeStudy"
+  }
+}
+
+jacoco {
+    toolVersion = "0.8.5"
+    reportsDir = file("$buildDir/customJacocoReportDir")
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled true
+        csv.enabled false
+        html.destination file("${buildDir}/jacocoHtml")
+    }
+}
+
+test {
+    jacoco {
+        destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
+        classDumpDir = file("$buildDir/jacoco/classpathdumps")
+    }
+}
+
+mainClassName = 'logic.control.AppLauncher'
 
 repositories {
     // Use jcenter and mavenCentral for resolving dependencies.
